Se agregan dimensiones recomendadas a las imagenes que se carguen a Peliculas/Series

--- a/src/app/pages/series/series-popup/series-popup.component.html
+++ b/src/app/pages/series/series-popup/series-popup.component.html
@@ -138,7 +138,7 @@
         
             <div class="row d-flex justify-content-center">
               <div class="col-6">
-                <p><strong>Poster (Miniatura)</strong></p>
+                <p><strong>Poster "Miniatura" - ( Tamaño: Ancho:195px - Alto:285px )</strong></p>
                 <img *ngIf="!preview.poster_file" src="assets/img/img-preview.png" width="200px" class="" />
                 <img *ngIf="preview.poster_file" [src]="preview.poster_file" class="img-fluid" />
           
@@ -151,7 +151,7 @@
               </div>
           
               <div class="col-6">
-                <p><strong>Landscape Poster  (Imagen Grande)</strong></p>
+                <p><strong>Landscape Poster "Imagen Grande" - (Tamaño: Ancho:1900px - Alto:766px )</strong></p>
                 <img *ngIf="!preview.landscape_poster_file" src="assets/img/img-preview.png" width="200px" class="" />
                 <img *ngIf="preview.landscape_poster_file" [src]="preview.landscape_poster_file" class="img-fluid" />
           
@@ -164,7 +164,7 @@
               </div>
           
               <div class="col-6">
-                <p><strong>Imagen apartado "Mas Info"</strong></p>
+                <p><strong>Imagen apartado "Mas Info" - (Tamaño: Ancho:1070px - Alto:544px )</strong></p>
                 <img *ngIf="!preview.thumb_file" src="assets/img/img-preview.png" width="200px" class="" />
                 <img *ngIf="preview.thumb_file" [src]="preview.thumb_file" class="img-fluid" />
           
